# OpenAISdk

./: .gitignore  README.md
01-py-uv/: README.md
01-py-uv/method1-pkg/: README.md  pyproject.toml
01-py-uv/method1-pkg/src/method1_pkg/: __init__.py
01-py-uv/method2-app/: README.md  main.py  pyproject.toml
02-py-chainlit/: README.md
02-py-uv/: README.md
02-python-uv/: README.md
02-swarm/: README.md
03-Streaming/gemini-streaming-app/: .env  README.md  main.py  pyproject.toml
03-py-chainlit/: README.md
03_hello_agent/: README.md
03_hello_agent/hello_sync_agent-app/: README.md  main.py  pyproject.toml
04-Lite-LLM/00-Hello-world/: README.md
04-OpenRouter/: READMe.md
04-OpenRouter/first-app/: README.md  main.py  pyproject.toml
04-chatbot-chainlit/vs-code-example-Gemini-with-auth/: .env  README.md  chainlit.yaml  commands.txt  main.py  pyproject.toml
05-Lite-LLM/00-Hello-world/: README.md
05-Lite-LLM/01_litellm/: main.py  pyproject.toml
05-Lite-LLM/02-getWeather/: index.ipynb
05-py-chainlit/code-demo/: pyproject.toml
07-Streaming/gemini-streaming-app/: main.py
08-Function-Tools-Calling/tools-app/: pyproject.toml
08-Streaming/: README.md
09-Function-Tools-Calling/: README.md
10-agents_as_tool-app/: .env  README.md  main.py  pyproject.toml
11-context/: README.md  main.py  pyproject.toml
11-handsoff/: README.md
12-context/: README.md
12-handsoff/: README.md  main.py  pyproject.toml
13-guardrail/: README.md
14-Structure-Output/: README.md
15-Tracing/: README.md
16-run-Lifecycle-Hooks/: README.md
17-Session/: README.md
(+68 files in other folders)
