[project]
name = "hello-chainlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "skhussain123", email = "hk0527075@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.5.5",
]

[project.scripts]
hello-chainlit = "hello_chainlit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
